[package]
name = "async-task"
version = "4.3.0"
edition = "2018"
rust-version = "1.47"
license = "Apache-2.0 OR MIT"
exclude = ["/.*"]

[features]
default = ["std"]
std = []

[dev-dependencies]
atomic-waker = "1"
easy-parallel = "3"
flaky_test = "0.1"
flume = { version = "0.10", default-features = false }
once_cell = "1"
smol = "1"

# rewrite dependencies to use the this version of async-task when running tests
[patch.crates-io]
async-task = { path = "." }
